--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "database_development",
+    "password": "king+5688",
+    "database": "gourmet_development",
     "host": "127.0.0.1",
+    "port":"5690",
     "dialect": "mysql"
   },
   "test": {
