定义模型（models），静态资源文件（koa-static-cache），ejs模板配置

--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,8 @@
     "database": "gourmet_development",
     "host": "127.0.0.1",
     "port":"5690",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "timezone":"+08:00"
   },
   "test": {
     "username": "root",
