--- a/package.json
+++ b/package.json
@@ -18,18 +18,29 @@
   },
   "homepage": "https://github.com/lang1427/gourmet-world#readme",
   "devDependencies": {
+    "@types/jquery": "^3.5.5",
     "@types/koa": "^2.13.1",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-ejs": "^4.2.2",
+    "@types/koa-session": "^5.10.3",
     "@types/koa-static-cache": "^5.1.0",
     "@types/koa-views": "^2.0.4",
+    "@types/layui-layer": "^1.0.0",
+    "@types/layui-src": "^2.5.0",
+    "@types/md5": "^2.3.0",
+    "@types/vegas": "^2.5.0",
     "sequelize-cli": "^6.2.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@types/jquery.form": "^3.26.30",
     "cheerio": "^1.0.0-rc.9",
+    "jquery": "^1.12.4",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-controllers": "^0.1.6",
     "koa-ejs": "^4.3.0",
+    "koa-session": "^6.2.0",
     "koa-static-cache": "^5.1.4",
     "koa-views": "^7.0.1",
     "md5": "^2.3.0",
