--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/app.ts",
   "scripts": {
     "compile": "tsc --baseUrl ./src/**/*.ts --outDir ./dist --target ES2015 --module commonjs --strict true --experimentalDecorators true --emitDecoratorMetadata true --skipLibCheck true --forceConsistentCasingInFileNames true",
-    "app":"node ./dist/app.js",
+    "app": "node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +23,8 @@
     "@types/jquery": "^3.5.5",
     "@types/jquery-lazyload": "^1.9.2",
     "@types/jquery.cookie": "^1.4.31",
+    "@types/jquery.base64": "0.0.29",
+    "@types/jquery.form": "^3.26.30",
     "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-ejs": "^4.2.2",
@@ -37,7 +39,6 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "@types/jquery.form": "^3.26.30",
     "cheerio": "^1.0.0-rc.9",
     "jquery": "^1.12.4",
     "jquery.cookie": "^1.4.1",
