step表和goods表取消关联(创建goods数据时即创建step数据)，发布菜谱页面，上传文件功能

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   "devDependencies": {
     "@types/jquery": "^3.5.5",
     "@types/jquery-lazyload": "^1.9.2",
-    "@types/jquery.cookie": "^1.4.31",
     "@types/jquery.base64": "0.0.29",
+    "@types/jquery.cookie": "^1.4.31",
+    "@types/jquery.fileupload": "^9.22.2",
     "@types/jquery.form": "^3.26.30",
     "@types/koa": "^2.13.1",
-    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-ejs": "^4.2.2",
     "@types/koa-session": "^5.10.3",
     "@types/koa-static-cache": "^5.1.0",
@@ -43,13 +43,14 @@
     "jquery": "^1.12.4",
     "jquery.cookie": "^1.4.1",
     "koa": "^2.13.1",
-    "koa-bodyparser": "^4.3.0",
+    "koa-body": "^4.2.0",
     "koa-controllers": "^0.1.6",
     "koa-ejs": "^4.3.0",
     "koa-session": "^6.2.0",
     "koa-static-cache": "^5.1.4",
     "koa-views": "^7.0.1",
     "md5": "^2.3.0",
+    "methods-util": "^0.3.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.2",
